--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
  
   <div class="box">
-    <img src="C:\Users\kajalau\laurin_projektit\order-summary-component-main\order-summary-component-main\images\illustration-hero.svg" alt="musicdance" class="tanssi">
+    <img src="images/illustration-hero.svg" alt="musicdance" class="tanssi">
     <h1>Order Summary</h1>
 
     <p class="kuvailu">You can now listen to millions of songs, <br> audiobooks, and podcasts on any 
